src/test/deca/context/invalid/homemade/tests/test01_identifier/test01_identifier_null.deca
// test invalide de la règle 0.1

class A {}

{
    A a = Null;
}